fix about-me image alignment

--- a/style.css
+++ b/style.css
@@ -127,21 +127,27 @@ html {
   padding-block: 6em;
 }
 
+.profile_pic {
+  display: flex;
+  justify-content: center;
+}
+
 .intro {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  justify-content: center;
+  gap: 100px;
   width: 100%;
 }
 
 .intro img {
-  width: 350px;
+  width: 250px;
   height: auto;
   border-radius: 10px;
 }
 
 .intro p {
-  padding-left: 30px;
+  max-width: 350px;
 }
 
 .intro h3,
@@ -323,7 +329,7 @@ li .vscodeImg {
 .project-header h1,
 .contact h1 {
   text-align: center;
-  font-size: 2em;
+  font-size: 2.2em;
   color: #ff595a;
 }
 
@@ -344,6 +350,7 @@ li .vscodeImg {
   background: #ff5959b5;
   transition: 0.7s ease;
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 div .contact-me {
